@@ -40,8 +40,11 @@ attribute.
   <li>sun (the standard compiler of the JDK)</li>
   <li>kaffe (the standard compiler of <a href="http://www.kaffe.org" target="_top">Kaffe</a>)</li>
   <li>weblogic</li>
-  <li>forking - the sun compiler forked into a separate process</li>
-  <li> "" (empty string). This has the same behaviour as not setting the compiler attribute.
+  <li>forking - the sun compiler forked into a separate process (since Ant 1.7)</li>
+  <li>xnew - the sun compiler forked into a separate process,
+      with the -Xnew option (since Ant 1.7).
+      This is the most reliable way to use -Xnew</li>
+    <li> "" (empty string). This has the same behaviour as not setting the compiler attribute.
     First the value of <tt>build.rmic</tt> is used if defined, and if not, the default
     for the platform is chosen. If build.rmic is set to this, you get the default.
 
@@ -83,7 +86,9 @@ please consult miniRMI's documentation to learn how to use it.</p>
     <td valign="top">stubversion</td>
     <td valign="top">Specify the JDK version for the generated stub code.
  Specify &quot;1.1&quot; to pass the &quot;-v1.1&quot; option to rmic,
- "1.2" for -v12, compat for -vcompat. 
+ "1.2" for -v12, compat for -vcompat. <br>
+        Since Ant1.7, if you do not specify a version, and do not ask
+        for iiop or idl files, "compat" is selected.
  
  </td>
     <td align="center" valign="top">No, default="compat"</td>
@@ -245,7 +250,7 @@ files below <code>${build}/classes</code> whose classname starts with
 <code>${build}/classes</code>.</p>
 
 <hr>
-<p align="center">Copyright &copy; 2000-2005 The Apache Software Foundation. All rights
+<p align="center">Copyright &copy; 2000-2006 The Apache Software Foundation. All rights
 Reserved.</p>
 
 </body>
